# django-react-polls-with-hypernova-examples

./: .editorconfig  .gitignore  README.md  pyproject.toml
django_project/polls/templates/: react_print.html
example_1_with_drtt_hydration/: README.md  pyproject.toml
example_1_with_drtt_hydration/django_project/core/: settings.py
example_1_with_drtt_hydration/django_project/polls/templates/polls/: base.html
example_1_with_drtt_hydration/frontend/: package-lock.json
example_1_with_drtt_hydration/frontend/src/: hypernova.js
example_1_with_drtt_hydration/frontend/src/utils/: wrapInBaseContainer.js
example_2_with_builtin_hydration/: README.md
example_2_with_builtin_hydration/django_project/core/templatetags/: create_react_app.py
example_2_with_builtin_hydration/django_project/polls/templates/polls/: base.html
example_2_with_builtin_hydration/frontend/: package.json
example_2_with_builtin_hydration/frontend/src/containers/App/: App.scss
example_2_with_builtin_hydration/frontend/src/containers/DetailView/: DetailView.js
example_2_with_builtin_hydration/frontend/src/containers/IndexView/: IndexView.js
example_2_with_builtin_hydration/frontend/src/utils/: withHypernova.js
frontend/: hypernova-bootstrap.js  package-lock.json  package.json
frontend/src/: hypernova.js  index.js
