[tool.poetry]
name = "django-react-polls-with-hypernova-example"
version = "0.1.0"
description = ""
authors = ["Martin Sandström <martin@marteinn.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"
django-rest-framework = "^0.1.0"
django-react-templatetags = "^5.4.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
